examples/test/testpolicy19713.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19713
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key33: value45
      key12: value23
      key6: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value19
          key36: value43
          key18: value46
